# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  common.py  odd_game.py
brain_games/games/: __init__.py  calc.py  engine.py  gcd.py  odd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
