[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gleb Voropaev <info@gvoropaev.com>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
